--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -10,7 +10,7 @@ $secondary: #f38d8d;
 $tertiary: #68b0c1;
 $quaternary: #227284;
 $quinary: #b9dde7;
-$pastelBlue: #f6f6f6;
+$senary: #f6f6f6;
 
 // HEADINGS:
 // h1: 80px;
