--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -3,4 +3,5 @@
 @import "./partials/baseStyles";
 @import "./partials/header";
 @import "./partials/sections";
+@import "./partials/blog";
 @import "./partials/footer";
