--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -2,6 +2,7 @@
 @import "./partials/variables";
 @import "./partials/baseStyles";
 @import "./partials/header";
+@import "./partials/main";
 @import "./partials/sections";
 @import "./partials/blog";
 @import "./partials/footer";
