--- a/styles/styles.css
+++ b/styles/styles.css
@@ -195,8 +195,8 @@ input::-moz-focus-inner {
 }
 
 .wrapper {
-  max-width: 1200px;
-  width: 90%;
+  max-width: 1500px;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -357,6 +357,622 @@ footer {
   padding: 3px;
 }
 
+.main nav {
+  background-color: #b9dde7;
+  max-width: 100%;
+}
+
+.main ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #171717;
+  margin: 0 150px;
+  padding: 0;
+}
+
+.main li {
+  list-style-type: none;
+}
+
+.main li:nth-child(3) a {
+  font-size: 42px;
+  margin: 10px 30px;
+}
+
+.main li a {
+  color: #171717;
+  font-family: "Oswald";
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+  margin: 0 20px;
+}
+
+.main {
+  background-color: #b9dde7;
+  height: 70vh;
+  max-width: 100%;
+}
+
+.main .wrapper {
+  position: relative;
+}
+
+.main .everyDay {
+  display: none;
+}
+
+.main h1 {
+  position: absolute;
+  top: 350px;
+  left: 650px;
+  font-family: "Oswald";
+  font-size: 7.5rem;
+  font-weight: bold;
+  line-height: 92px;
+  letter-spacing: 1px;
+}
+
+.main .img1 {
+  position: absolute;
+  top: 200%;
+  left: 5%;
+  -webkit-box-shadow: 20px 20px white;
+          box-shadow: 20px 20px white;
+}
+
+.main .img2 {
+  position: absolute;
+  top: 345px;
+  left: 940px;
+}
+
+.introduction .textContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin: 50px 30px 80px 653px;
+}
+
+.introduction h2 {
+  font-family: "Oswald";
+  font-weight: bold;
+  font-size: 42px;
+  letter-spacing: 1px;
+  margin-bottom: 20px;
+}
+
+.introduction p {
+  margin-top: 0;
+  margin-bottom: 30px;
+  line-height: 32px;
+}
+
+.introduction button {
+  width: 220px;
+  font-family: "Oswald";
+  font-size: 20px;
+  font-weight: bold;
+  background-color: #f38d8d;
+  border: none;
+  padding: 10px;
+  line-height: 32px;
+  letter-spacing: 1px;
+}
+
+.option1,
+.option2,
+.option3,
+.option4 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.sectionNav .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.navText {
+  margin-left: 20px;
+}
+
+.fa-stack-1x,
+.fa-stack-2x {
+  left: 0;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+}
+
+.fa.fa-circle-thin:before {
+  content: "";
+  margin-left: -10px;
+  background-color: #b9dde7;
+  border-radius: 50%;
+  color: #b9dde7;
+}
+
+.navText h3 {
+  font-family: "Oswald";
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.navText p {
+  font-family: "Cabin";
+  font-size: 20px;
+  font-weight: normal;
+}
+
+span {
+  margin-top: 35px;
+}
+
+.sectionNav {
+  margin: 100px;
+  background-color: #f6f6f6;
+}
+
+.travel .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: white;
+  position: relative;
+}
+
+.travel h3 {
+  font-family: "Oswald";
+  font-size: 32px;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+.travel .textContainer p {
+  font-family: "Cabin";
+  font-size: 20px;
+  font-weight: normal;
+  line-height: 32px;
+  letter-spacing: 0px;
+}
+
+.travel .imgContainer {
+  position: absolute;
+  left: 105px;
+  top: -40px;
+}
+
+.travel .textContainer {
+  margin-left: 48%;
+  padding: 100px;
+}
+
+.travel img {
+  max-width: 100%;
+  -webkit-box-shadow: 20px 20px #68b0c1, -120px 20px #68b0c1;
+          box-shadow: 20px 20px #68b0c1, -120px 20px #68b0c1;
+}
+
+.travel .imgContainer,
+.travel .textContainer {
+  width: 50%;
+}
+
+.travel .textContainer button {
+  width: 220px;
+  font-family: "Oswald";
+  font-size: 20px;
+  font-weight: bold;
+  background-color: #f38d8d;
+  border: none;
+  padding: 10px;
+  line-height: 32px;
+  letter-spacing: 1px;
+}
+
+.hobbies .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: white;
+  position: relative;
+}
+
+.hobbies h3 {
+  font-family: "Oswald";
+  font-size: 32px;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+.hobbies .textContainer p {
+  font-family: "Cabin";
+  font-size: 20px;
+  font-weight: normal;
+  line-height: 32px;
+  letter-spacing: 0px;
+}
+
+.hobbies .imgContainer {
+  position: absolute;
+  right: 10px;
+  top: 40px;
+}
+
+.hobbies .textContainer {
+  margin-right: 48%;
+  padding: 0 100px 100px 100px;
+}
+
+.hobbies img {
+  max-width: 100%;
+  -webkit-box-shadow: 20px 20px #b9dde7, 120px 20px #b9dde7;
+          box-shadow: 20px 20px #b9dde7, 120px 20px #b9dde7;
+}
+
+.hobbies .imgContainer,
+.hobbies .textContainer {
+  width: 50%;
+}
+
+.hobbies .textContainer button {
+  width: 220px;
+  font-family: "Oswald";
+  font-size: 20px;
+  font-weight: bold;
+  background-color: #f38d8d;
+  border: none;
+  padding: 10px;
+  line-height: 32px;
+  letter-spacing: 1px;
+  margin-left: 325px;
+}
+
+.journey .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.journey .imgContainer {
+  width: 40%;
+  margin-top: 150px;
+}
+
+.journey img {
+  -webkit-box-shadow: 18px 18px #227284;
+          box-shadow: 18px 18px #227284;
+  margin-left: 120px;
+}
+
+.journey .textContainer {
+  width: 60%;
+  margin: 95px 100px 10 px 50px;
+}
+
+.journey h3 {
+  font-family: "Oswald";
+  font-size: 42px;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+.journey .textContainer p {
+  font-family: "Cabin";
+  font-size: 20px;
+  font-weight: normal;
+  line-height: 32px;
+  letter-spacing: 0px;
+}
+
+.journey .textContainer button {
+  width: 220px;
+  font-family: "Oswald";
+  font-size: 20px;
+  font-weight: bold;
+  background-color: #f38d8d;
+  border: none;
+  padding: 10px;
+  line-height: 32px;
+  letter-spacing: 1px;
+}
+
+.gallery .wrapper .imgContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin: 100px;
+}
+
+.gallery img {
+  padding: 0 20px;
+}
+
+.gallery {
+  background-color: white;
+}
+
+@media (max-width: 500px) {
+  .blogPost .wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .harperPost {
+    padding: 0;
+  }
+
+  .blogForm input[type=text],
+input[type=email] {
+    padding: 15px;
+    border: 0;
+    width: calc(100% -70px);
+  }
+
+  .aboutHarper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .blogPost .leftContainer {
+    width: 100%;
+  }
+
+  .blogPost .rightContainer {
+    width: 100%;
+  }
+
+  .leftContainer h4 {
+    text-align: center;
+  }
+
+  .recentPosts ul {
+    text-align: center;
+    padding: 0;
+    list-style: none;
+  }
+
+  .contactInfo .wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .contact .wrapper {
+    position: relative;
+  }
+
+  .contact h1 {
+    font-size: 65px;
+    position: absolute;
+    left: 60px;
+    bottom: -65px;
+  }
+
+  .contactInfo .contactForm {
+    width: 100%;
+    margin-top: 10px;
+    margin-left: 0;
+  }
+
+  .contactDetails .social {
+    margin: 0;
+    text-align: center;
+  }
+
+  .main .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .main {
+    height: 100vh;
+  }
+
+  .main .everyDay {
+    display: block;
+    margin-top: 40px;
+    color: white;
+  }
+
+  .main .img1 {
+    max-width: 100%;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    top: 155%;
+    left: 0;
+  }
+
+  .main .img2 {
+    visibility: hidden;
+  }
+
+  .main h1 {
+    top: 110px;
+    left: 0;
+    font-family: "Oswald";
+    font-size: 5rem;
+    font-weight: bold;
+    line-height: 20px;
+    letter-spacing: 1px;
+  }
+
+  .introduction .textContainer {
+    margin: 10px 0;
+  }
+
+  .introduction p {
+    margin: 10px 10px;
+  }
+
+  .mainImage img {
+    margin-top: 20px;
+    width: 100%;
+  }
+
+  .sectionNav .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .sectionNav {
+    margin: 20px;
+  }
+
+  .travel .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .travel img {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    width: 100%;
+  }
+
+  .travel .imgContainer {
+    width: 100%;
+    position: static;
+    margin-top: 20px;
+  }
+
+  .travel .imgContainer,
+.travel .textContainer {
+    width: 100%;
+  }
+
+  .travel .textContainer {
+    margin: 10px;
+    padding: 0;
+  }
+
+  .hobbies .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .hobbies img {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    width: 100%;
+  }
+
+  .hobbies .imgContainer {
+    width: 100%;
+    position: static;
+    margin-top: 20px;
+  }
+
+  .hobbies .imgContainer,
+.hobbies .textContainer {
+    width: 100%;
+  }
+
+  .hobbies .textContainer {
+    margin: 10px;
+    padding: 0;
+  }
+
+  .hobbies .textContainer button {
+    margin-left: 260px;
+  }
+
+  .journey .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .journey img {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    margin: 10px 10px 10px 100px;
+  }
+
+  .journey .imgContainer {
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  .journey .textContainer {
+    width: 100%;
+    margin: 20px;
+    text-align: center;
+  }
+
+  .gallery .wrapper .imgContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 10px;
+  }
+
+  .gallery .imgContainer img {
+    margin: 10px;
+  }
+}
 .blog nav {
   background-color: #b9dde7;
   max-width: 100%;
@@ -419,6 +1035,7 @@ footer {
 
 .blog img {
   margin-top: 0;
+  width: 100%;
 }
 
 .blogPost .wrapper {
