--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -28,10 +28,11 @@
   margin: 0 20px;
   cursor: pointer;
 }
-
+.blog .image {
+  position: relative;
+}
 .blog img {
   max-width: 100%;
-  height: 260px;
   margin: 20px 0;
 }
 
@@ -45,8 +46,8 @@
   position: absolute;
   line-height: 92px;
   letter-spacing: 1px;
-  left: 125px;
-  bottom: -70px;
+  left: 5%;
+  bottom: -20%;
 }
 
 .blog img {
@@ -158,8 +159,9 @@
   font-family: $bodyFont;
   font-size: 20px;
   //   width: 100%;
-  display: flex;
   justify-content: space-evenly;
+  // width: calc(100% - 75px);
+  width: 100%;
 }
 
 .blogForm input[type="text"],
