--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,8 +1,9 @@
 @import "./partials/setup";
 @import "./partials/variables";
 @import "./partials/baseStyles";
-@import "./partials/header";
 @import "./partials/main";
+@import "./partials/header";
 @import "./partials/sections";
 @import "./partials/blog";
 @import "./partials/footer";
+@import "./partials/mediaQueries";
