--- a/styles/styles.css
+++ b/styles/styles.css
@@ -200,6 +200,83 @@ input::-moz-focus-inner {
   margin: 0 auto;
 }
 
+.main nav {
+  background-color: #b9dde7;
+  max-width: 100%;
+}
+
+.main ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #171717;
+  margin: 0 150px;
+  padding: 0;
+}
+
+.main li {
+  list-style-type: none;
+}
+
+.main li:nth-child(3) a {
+  font-size: 42px;
+  margin: 10px 30px;
+}
+
+.main li a {
+  color: #171717;
+  font-family: "Oswald";
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+  margin: 0 20px;
+}
+
+.main {
+  background-color: #b9dde7;
+  height: 70vh;
+  max-width: 100%;
+}
+
+.main .wrapper {
+  position: relative;
+}
+
+.main .everyDay {
+  display: none;
+}
+
+.main h1 {
+  position: absolute;
+  top: 350px;
+  left: 650px;
+  font-family: "Oswald";
+  font-size: 7.5rem;
+  font-weight: bold;
+  line-height: 92px;
+  letter-spacing: 1px;
+}
+
+.main .img1 {
+  position: absolute;
+  top: 200%;
+  left: 5%;
+  -webkit-box-shadow: 20px 20px white;
+          box-shadow: 20px 20px white;
+}
+
+.main .img2 {
+  position: absolute;
+  top: 345px;
+  left: 940px;
+}
+
 .contact nav {
   background-color: #b9dde7;
   max-width: 100%;
@@ -239,9 +316,13 @@ input::-moz-focus-inner {
 }
 
 .contact img {
-  max-width: 100%;
+  width: 100%;
   height: 260px;
   margin: 20px 0;
+}
+
+.contact .image {
+  position: relative;
 }
 
 .contact {
@@ -255,8 +336,8 @@ input::-moz-focus-inner {
   position: absolute;
   line-height: 92px;
   letter-spacing: 1px;
-  left: 125px;
-  bottom: -90px;
+  left: 5%;
+  bottom: -20%;
 }
 
 .contactInfo {
@@ -355,83 +436,6 @@ footer {
   color: #f6f6f6;
   margin-top: 10px;
   padding: 3px;
-}
-
-.main nav {
-  background-color: #b9dde7;
-  max-width: 100%;
-}
-
-.main ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #171717;
-  margin: 0 150px;
-  padding: 0;
-}
-
-.main li {
-  list-style-type: none;
-}
-
-.main li:nth-child(3) a {
-  font-size: 42px;
-  margin: 10px 30px;
-}
-
-.main li a {
-  color: #171717;
-  font-family: "Oswald";
-  font-size: 20px;
-  font-weight: bold;
-  text-decoration: none;
-  margin: 0 20px;
-}
-
-.main {
-  background-color: #b9dde7;
-  height: 70vh;
-  max-width: 100%;
-}
-
-.main .wrapper {
-  position: relative;
-}
-
-.main .everyDay {
-  display: none;
-}
-
-.main h1 {
-  position: absolute;
-  top: 350px;
-  left: 650px;
-  font-family: "Oswald";
-  font-size: 7.5rem;
-  font-weight: bold;
-  line-height: 92px;
-  letter-spacing: 1px;
-}
-
-.main .img1 {
-  position: absolute;
-  top: 200%;
-  left: 5%;
-  -webkit-box-shadow: 20px 20px white;
-          box-shadow: 20px 20px white;
-}
-
-.main .img2 {
-  position: absolute;
-  top: 345px;
-  left: 940px;
 }
 
 .introduction .textContainer {
@@ -712,267 +716,6 @@ span {
   background-color: white;
 }
 
-@media (max-width: 500px) {
-  .blogPost .wrapper {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-
-  .harperPost {
-    padding: 0;
-  }
-
-  .blogForm input[type=text],
-input[type=email] {
-    padding: 15px;
-    border: 0;
-    width: calc(100% -70px);
-  }
-
-  .aboutHarper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-
-  .blogPost .leftContainer {
-    width: 100%;
-  }
-
-  .blogPost .rightContainer {
-    width: 100%;
-  }
-
-  .leftContainer h4 {
-    text-align: center;
-  }
-
-  .recentPosts ul {
-    text-align: center;
-    padding: 0;
-    list-style: none;
-  }
-
-  .contactInfo .wrapper {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-
-  .contact .wrapper {
-    position: relative;
-  }
-
-  .contact h1 {
-    font-size: 65px;
-    position: absolute;
-    left: 60px;
-    bottom: -65px;
-  }
-
-  .contactInfo .contactForm {
-    width: 100%;
-    margin-top: 10px;
-    margin-left: 0;
-  }
-
-  .contactDetails .social {
-    margin: 0;
-    text-align: center;
-  }
-
-  .main .wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-
-  .main {
-    height: 100vh;
-  }
-
-  .main .everyDay {
-    display: block;
-    margin-top: 40px;
-    color: white;
-  }
-
-  .main .img1 {
-    max-width: 100%;
-    -webkit-box-shadow: none;
-            box-shadow: none;
-    top: 155%;
-    left: 0;
-  }
-
-  .main .img2 {
-    visibility: hidden;
-  }
-
-  .main h1 {
-    top: 110px;
-    left: 0;
-    font-family: "Oswald";
-    font-size: 5rem;
-    font-weight: bold;
-    line-height: 20px;
-    letter-spacing: 1px;
-  }
-
-  .introduction .textContainer {
-    margin: 10px 0;
-  }
-
-  .introduction p {
-    margin: 10px 10px;
-  }
-
-  .mainImage img {
-    margin-top: 20px;
-    width: 100%;
-  }
-
-  .sectionNav .wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-
-  .sectionNav {
-    margin: 20px;
-  }
-
-  .travel .wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-
-  .travel img {
-    -webkit-box-shadow: none;
-            box-shadow: none;
-    width: 100%;
-  }
-
-  .travel .imgContainer {
-    width: 100%;
-    position: static;
-    margin-top: 20px;
-  }
-
-  .travel .imgContainer,
-.travel .textContainer {
-    width: 100%;
-  }
-
-  .travel .textContainer {
-    margin: 10px;
-    padding: 0;
-  }
-
-  .hobbies .wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-
-  .hobbies img {
-    -webkit-box-shadow: none;
-            box-shadow: none;
-    width: 100%;
-  }
-
-  .hobbies .imgContainer {
-    width: 100%;
-    position: static;
-    margin-top: 20px;
-  }
-
-  .hobbies .imgContainer,
-.hobbies .textContainer {
-    width: 100%;
-  }
-
-  .hobbies .textContainer {
-    margin: 10px;
-    padding: 0;
-  }
-
-  .hobbies .textContainer button {
-    margin-left: 260px;
-  }
-
-  .journey .wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-
-  .journey img {
-    -webkit-box-shadow: none;
-            box-shadow: none;
-    margin: 10px 10px 10px 100px;
-  }
-
-  .journey .imgContainer {
-    width: 100%;
-    margin-top: 20px;
-  }
-
-  .journey .textContainer {
-    width: 100%;
-    margin: 20px;
-    text-align: center;
-  }
-
-  .gallery .wrapper .imgContainer {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    margin: 10px;
-  }
-
-  .gallery .imgContainer img {
-    margin: 10px;
-  }
-}
 .blog nav {
   background-color: #b9dde7;
   max-width: 100%;
@@ -1012,9 +755,12 @@ input[type=email] {
   cursor: pointer;
 }
 
+.blog .image {
+  position: relative;
+}
+
 .blog img {
   max-width: 100%;
-  height: 260px;
   margin: 20px 0;
 }
 
@@ -1029,8 +775,8 @@ input[type=email] {
   position: absolute;
   line-height: 92px;
   letter-spacing: 1px;
-  left: 125px;
-  bottom: -70px;
+  left: 5%;
+  bottom: -20%;
 }
 
 .blog img {
@@ -1157,10 +903,10 @@ input[type=email] {
           flex-direction: column;
   font-family: "Cabin";
   font-size: 20px;
-  display: flex;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  width: 100%;
 }
 
 .blogForm input[type=text],
@@ -1201,4 +947,478 @@ button {
 
 .blogForm .formDetails {
   margin-top: 20px;
+}
+
+@media (max-width: 1200px) {
+  img {
+    -webkit-box-shadow: none !important;
+            box-shadow: none !important;
+  }
+
+  .blogForm input[type=text],
+input[type=email] {
+    padding: 15px;
+    border: 0;
+    width: 47.5%;
+  }
+
+  .rightContainer .blogForm {
+    width: 100%;
+  }
+}
+@media (max-width: 870px) {
+  .main .wrapper {
+    position: relative;
+  }
+
+  .main {
+    height: 50vh;
+  }
+
+  .main .img1 {
+    max-width: 40%;
+    position: absolute;
+    top: 160%;
+    left: 5%;
+  }
+
+  .main h1 {
+    position: absolute;
+    top: 320%;
+    left: 50%;
+    font-family: "Oswald";
+    font-size: 5.5rem;
+    font-weight: bold;
+    line-height: 92px;
+    letter-spacing: 1px;
+  }
+
+  .mainImage img {
+    width: 100%;
+  }
+
+  .main .img2 {
+    position: absolute;
+    top: 300%;
+    left: 72%;
+  }
+
+  .introduction .textContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    margin-left: 50%;
+  }
+
+  .sectionNav {
+    margin: 50px 30px;
+    background-color: #f6f6f6;
+  }
+
+  .travel img {
+    max-width: 80%;
+    -webkit-box-shadow: 10px 10px #68b0c1, -78px 10px #68b0c1;
+            box-shadow: 10px 10px #68b0c1, -78px 10px #68b0c1;
+  }
+
+  .travel .imgContainer {
+    position: absolute;
+    left: 80px;
+    top: -40px;
+  }
+
+  .travel .textContainer {
+    margin-left: 52%;
+    padding: 0;
+  }
+
+  .travel h3 {
+    font-family: "Oswald";
+    font-size: 32px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    margin: 10px 0;
+  }
+
+  .hobbies img {
+    max-width: 80%;
+    -webkit-box-shadow: 10px 10px #b9dde7, 78px 10px #b9dde7;
+            box-shadow: 10px 10px #b9dde7, 78px 10px #b9dde7;
+  }
+
+  .hobbies .textContainer {
+    margin-right: 52%;
+    padding: 10px;
+  }
+
+  .hobbies h3 {
+    margin: 10px 0;
+  }
+
+  .hobbies .textContainer button {
+    width: 220px;
+    font-family: "Oswald";
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #f38d8d;
+    border: none;
+    padding: 10px;
+    line-height: 32px;
+    letter-spacing: 1px;
+    margin-left: 180px;
+  }
+
+  .hobbies .imgContainer {
+    position: absolute;
+    right: 10px;
+    top: 160px;
+  }
+
+  .journey .imgContainer {
+    width: 40%;
+    margin-top: 100px;
+  }
+
+  .journey img {
+    -webkit-box-shadow: 18px 18px #227284;
+            box-shadow: 18px 18px #227284;
+    margin: 10px;
+  }
+
+  .gallery .wrapper .imgContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    margin: 50px;
+  }
+
+  .gallery img {
+    max-width: 35%;
+    padding: 0 5px;
+  }
+
+  .blogForm input[type=text],
+.blogForm input[type=email] {
+    padding: 15px;
+    border: 0;
+    width: 45.5%;
+  }
+
+  .blogForm input[type=text] {
+    margin-right: 5px;
+  }
+
+  .harperPost {
+    padding: 0;
+  }
+
+  .leftContainer .aboutHarper,
+.leftContainer .recentPosts {
+    padding: 10px;
+  }
+
+  .rightContainer .blogForm {
+    width: 100%;
+  }
+
+  .contactForm {
+    margin: 5px;
+  }
+
+  .contactForm input[type=text],
+.contactForm input[type=email] {
+    padding: 5px;
+    border: 0;
+    width: 47.5%;
+  }
+
+  .contactForm input[type=text] {
+    margin-right: 5px;
+  }
+
+  .contactForm textarea {
+    padding: 5px;
+  }
+
+  .contactInfo .social {
+    margin: 0;
+  }
+
+  .contactDetails {
+    padding: 10px;
+  }
+}
+@media (max-width: 500px) {
+  .blogPost .wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .rightContainer .harperPost {
+    padding: 10px;
+  }
+
+  .blogForm input[type=text],
+input[type=email] {
+    padding: 15px;
+    border: 0;
+    width: calc(100% -70px);
+  }
+
+  .aboutHarper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .blogPost .leftContainer {
+    width: 100%;
+  }
+
+  .blogPost .rightContainer {
+    width: 100%;
+  }
+
+  .leftContainer h4 {
+    text-align: center;
+  }
+
+  .recentPosts ul {
+    text-align: center;
+    padding: 0;
+    list-style: none;
+  }
+
+  .contactInfo .wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .contact .wrapper {
+    position: relative;
+  }
+
+  .contact h1 {
+    font-size: 65px;
+    position: absolute;
+    left: 60px;
+    bottom: -65px;
+  }
+
+  .contactInfo .contactForm {
+    width: 100%;
+    margin-top: 10px;
+    margin-left: 0;
+  }
+
+  .contactDetails .social {
+    margin: 0;
+    text-align: center;
+  }
+
+  .main .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .main {
+    height: 100vh;
+  }
+
+  .main .everyDay {
+    display: block;
+    margin-top: 40px;
+    color: white;
+  }
+
+  .main .img1 {
+    max-width: 100%;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    top: 155%;
+    left: 0;
+  }
+
+  .main .img2 {
+    display: none;
+  }
+
+  .main h1 {
+    top: 110px;
+    left: 0;
+    font-family: "Oswald";
+    font-size: 5rem;
+    font-weight: bold;
+    line-height: 20px;
+    letter-spacing: 1px;
+  }
+
+  .introduction .textContainer {
+    margin: 10px 0;
+  }
+
+  .introduction p {
+    margin: 10px 10px;
+  }
+
+  .mainImage img {
+    margin-top: 20px;
+    width: 100%;
+  }
+
+  .sectionNav .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .sectionNav {
+    margin: 20px;
+  }
+
+  .travel .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .travel img {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    width: 100%;
+  }
+
+  .travel .imgContainer {
+    width: 100%;
+    position: static;
+    margin-top: 20px;
+  }
+
+  .travel .imgContainer,
+.travel .textContainer {
+    width: 100%;
+  }
+
+  .travel .textContainer {
+    margin: 10px;
+    padding: 0;
+  }
+
+  .hobbies .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .hobbies img {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    width: 100%;
+  }
+
+  .hobbies .imgContainer {
+    width: 100%;
+    position: static;
+    margin-top: 20px;
+  }
+
+  .hobbies .imgContainer,
+.hobbies .textContainer {
+    width: 100%;
+  }
+
+  .hobbies .textContainer {
+    margin: 10px;
+    padding: 0;
+  }
+
+  .hobbies .textContainer button {
+    margin-left: 260px;
+  }
+
+  .journey .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .journey img {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    margin: 0;
+    width: 100%;
+  }
+
+  .journey .imgContainer {
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  .journey .textContainer {
+    width: 100%;
+    margin: 20px;
+    text-align: center;
+  }
+
+  .gallery .wrapper .imgContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 10px;
+  }
+
+  .gallery .imgContainer img {
+    margin: 10px;
+    max-width: 100%;
+  }
 }
