--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,9 +1,8 @@
 @import "./partials/setup";
 @import "./partials/variables";
 @import "./partials/baseStyles";
-@import "./partials/main";
-@import "./partials/header";
 @import "./partials/sections";
+@import "./partials/contactPage";
 @import "./partials/blog";
 @import "./partials/footer";
 @import "./partials/mediaQueries";
