--- a/styles/sass/partials/_sections.scss
+++ b/styles/sass/partials/_sections.scss
@@ -1,3 +1,77 @@
+// Main Section
+.main nav {
+  background-color: $quinary;
+  max-width: 100%;
+}
+
+.main ul {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  color: $primary;
+  margin: 0 150px;
+  padding: 0;
+}
+
+.main li {
+  list-style-type: none;
+}
+
+.main li:nth-child(3) a {
+  font-size: 42px;
+  margin: 10px 30px;
+}
+.main li a {
+  color: $primary;
+  font-family: $headingFont;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+  margin: 0 20px;
+}
+.main li a:hover,
+.main li a:focus {
+  color: white;
+  text-decoration: $quaternary underline;
+}
+
+.main {
+  background-color: $quinary;
+  height: 70vh;
+  max-width: 100%;
+}
+
+.main .wrapper {
+  position: relative;
+}
+.main .everyDay {
+  display: none;
+}
+.main h1 {
+  position: absolute;
+  top: 350px;
+  left: 650px;
+  font-family: $headingFont;
+  font-size: 7.5rem;
+  font-weight: bold;
+  line-height: 92px;
+  letter-spacing: 1px;
+}
+
+.main .img1 {
+  position: absolute;
+  top: 200%;
+  left: 5%;
+  box-shadow: 20px 20px white;
+}
+.main .img2 {
+  position: absolute;
+  top: 345px;
+  left: 940px;
+}
+.mainImage img {
+  width: 100%;
+}
 // Who's Harper
 .introduction .textContainer {
   display: flex;
@@ -31,6 +105,10 @@
   line-height: 32px;
   letter-spacing: 1px;
 }
+.introduction button:hover,
+.introduction button:focus {
+  color: white;
+}
 
 // Nav Options
 .option1,
@@ -38,6 +116,14 @@
 .option3,
 .option4 {
   display: flex;
+}
+.navLeft .navText a,
+.navRight .navText a {
+  text-decoration: none;
+}
+.sectionNav .navText h3:hover {
+  color: $secondary;
+  text-decoration: $secondary underline;
 }
 
 .sectionNav .wrapper {
@@ -140,7 +226,10 @@ span {
   line-height: 32px;
   letter-spacing: 1px;
 }
-
+.travel button:hover,
+.travel button:focus {
+  color: white;
+}
 // Favourite Things Section
 
 .hobbies .wrapper {
@@ -197,6 +286,10 @@ span {
   letter-spacing: 1px;
   margin-left: 325px;
 }
+.hobbies button:hover,
+.hobbiesbutton:focus {
+  color: white;
+}
 
 // Harper's Journey Section
 
@@ -243,6 +336,10 @@ span {
   padding: 10px;
   line-height: 32px;
   letter-spacing: 1px;
+}
+.journey button:hover,
+.journey button:focus {
+  color: white;
 }
 
 // Gallery Section
