--- a/styles/styles.css
+++ b/styles/styles.css
@@ -597,6 +597,99 @@ span {
   background-color: white;
 }
 
+.carouselTrack .wrapper {
+  width: 70%;
+  height: 600px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.carousel-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.carousel {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  -webkit-transition: 300ms -webkit-transform ease-in;
+  transition: 300ms -webkit-transform ease-in;
+  transition: 300ms transform ease-in;
+  transition: 300ms transform ease-in, 300ms -webkit-transform ease-in;
+}
+
+.slide {
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.slide img {
+  width: 100%;
+  height: 400px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.btn {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  border: none;
+  cursor: pointer;
+}
+
+.btn img {
+  width: 20px;
+  height: 20px;
+}
+
+.left-btn {
+  left: -35px;
+}
+
+.right-btn {
+  right: -35px;
+}
+
+.nav {
+  width: 100%;
+  height: 30px;
+  position: absolute;
+  top: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #b9dde7;
+}
+
+.nav .dot {
+  background: rgba(255, 255, 255, 0.7);
+  border: none;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  margin: 8px 10px;
+  cursor: pointer;
+}
+
+.dot.active {
+  background: #f38d8d;
+}
+
+.hide {
+  display: none;
+}
+
 .contact nav {
   background-color: #b9dde7;
   max-width: 100%;
@@ -1020,6 +1113,10 @@ footer {
     background-color: #b9dde7;
     height: 70vh;
     max-width: 100%;
+  }
+
+  .carouselTrack {
+    margin-top: 50px;
   }
 
   .blogForm input[type=text],
