--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -289,7 +289,37 @@
   .main .img2 {
     display: none;
   }
-  .main li:nth-child(3) a {
+
+  // Navbar + Hamburger Menu
+
+  .toggle-button {
+    display: flex;
+  }
+  .navbar-links {
+    width: 100%;
+    display: none;
+  }
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    height: 115px;
+  }
+
+  .navbar-links ul {
+    width: 100%;
+    flex-direction: column;
+  }
+  .navbar-links li {
+    text-align: center;
+  }
+  .navbar-links li a {
+    padding: 0.5rem;
+  }
+  .navbar-links.active {
+    display: flex;
+  }
+
+  /* .main li:nth-child(3) a {
     font-size: 38px;
     margin: 10px 10px;
   }
@@ -300,7 +330,7 @@
     font-weight: bold;
     text-decoration: none;
     margin: 0 15px;
-  }
+  } */
 
   .main {
     height: 75vh;
@@ -315,13 +345,14 @@
     left: 5%;
   }
   .main h1 {
-    top: 103px;
-    left: 102px;
+    top: 190px;
+    left: 87px;
     font-family: "Oswald";
     font-size: 5rem;
     font-weight: bold;
     line-height: 20px;
     letter-spacing: 1px;
+    // position: absolute;
   }
   .main .everyDay {
     display: block;
